--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.20",
-    "next": "14.2.4",
+    "next": "^14.2.35",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.81.0"
@@ -20,17 +19,18 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "autoprefixer": "^10.4.23",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-lit-a11y": "^1.1.0-next.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-unicorn": "^50.0.1",
-    "eslint-plugin-lit-a11y": "^1.1.0-next.1",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "prettier": "3.0.3",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.3",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "prettier": "3.0.3"
+    "typescript-eslint": "^8.46.3"
   }
 }
