--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
     "autoprefixer": "^10.4.20",
     "next": "14.2.4",
     "react": "^18",
@@ -20,17 +22,17 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-lit-a11y": "^1.1.0-next.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-unicorn": "^50.0.1",
-    "eslint-plugin-lit-a11y": "^1.1.0-next.1",
     "postcss": "^8.4.49",
+    "prettier": "3.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.3",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "prettier": "3.0.3"
+    "typescript-eslint": "^8.46.3"
   }
 }
