--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "autoprefixer": "^10.4.23",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.4",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-lit-a11y": "^1.1.0-next.1",
     "eslint-plugin-prettier": "^5.0.1",
