--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.5.0",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.81.0"
   },
   "devDependencies": {
@@ -26,17 +26,20 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.24",
+    "@types/react-transition-group": "^4.4.12",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-lit-a11y": "^1.1.0-next.1",
+    "eslint-plugin-lit-a11y": "^1.1.0-next.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-unicorn": "^50.0.1",
-    "postcss": "^8.5.6",
+    "postcss": "^8.4.49",
     "prettier": "3.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.54.0"
+    "typescript-eslint": "^8.46.3"
   }
 }
+
