--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "@szhsin/react-accordion": "^1.4.1",
     "autoprefixer": "^10.4.20",
     "next": "14.2.4",
     "react": "^18",
@@ -26,6 +27,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.24",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
