--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "autoprefixer": "^10.4.24",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-lit-a11y": "^1.1.0-next.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-unicorn": "^50.0.1",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.6",
     "prettier": "3.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.9.3",
