changed yaml job name

--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -5,7 +5,7 @@ on:
     types: [published]
 
 jobs:
-  deploy_staging:
+  deploy_production:
     name: Deploy Production
     runs-on: ubuntu-latest
     environment:
