--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-transition-group": "^4.4.5",
     "sass": "^1.81.0"
   },
@@ -32,7 +33,6 @@
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-lit-a11y": "^1.1.0-next.1",
-    "eslint-plugin-lit-a11y": "^1.1.0-next.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-unicorn": "^50.0.1",
     "postcss": "^8.4.49",
@@ -42,4 +42,3 @@
     "typescript-eslint": "^8.46.3"
   }
 }
-
