--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.81.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-transition-group": "^4.4.12",
     "autoprefixer": "^10.4.24",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
