--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@vercel/analytics": "^1.6.1",
     "autoprefixer": "^10.4.20",
+    "framer-motion": "^12.34.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
