--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@vercel/analytics": "^1.6.1",
+    "@szhsin/react-accordion": "^1.4.1",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^12.34.0",
     "next": "14.2.4",
@@ -30,6 +31,7 @@
     "@types/react-dom": "^18",
     "@types/react-transition-group": "^4.4.12",
     "autoprefixer": "^10.4.24",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
